@startuml
skinparam classAttributeIconSize 0
skinparam monochrome false
skinparam linetype ortho
skinparam defaultFontName "Arial"

' Styling
skinparam class {
    BackgroundColor white
    ArrowColor Black
    BorderColor Black
}

title Diagram Hubungan Entitas (ERD Physical Model) - Website Wakaf Baiturrahman

' --- ENTITIES ---

entity "t01_roles" as roles {
    * <b>id_role</b> : INT <<PK>> [increment]
    --
    * nama_role : VARCHAR(20)
    created_at : TIMESTAMP(0) [default: CURRENT_TIMESTAMP]
    edited_at : TIMESTAMP(0) [default: CURRENT_TIMESTAMP]
}

entity "t02_users" as users {
    * <b>id_user</b> : INT <<PK>> [increment]
    --
    * id_role : INT <<FK>> [ref: > t01_roles.id_role]
    * nama : VARCHAR(100)
    * email : VARCHAR(100) [unique]
    * password : VARCHAR(255)
    * no_hp : VARCHAR(15)
    jenis_kelamin : CHAR(1) // L/P
    alamat : TEXT
    tanggal_lahir : DATE
    status : VARCHAR(20) [default: 'active']
    email_verified_at : TIMESTAMP(0) [nullable] // Kolom Baru Verifikasi
    created_at : TIMESTAMP(0) [default: CURRENT_TIMESTAMP]
    edited_at : TIMESTAMP(0) [default: CURRENT_TIMESTAMP]
}

entity "t03_program_wakaf" as program {
    * <b>id_program</b> : INT <<PK>> [increment]
    --
    * nama_program : VARCHAR(150)
    deskripsi : TEXT
    * target_dana : NUMERIC(15,2)
    dana_terkumpul : NUMERIC(15,2) [default: 0]
    status_program : SMALLINT [default: 2] // 0: Selesai, 1: Aktif, 2: Ditinjau, 3: Ditolak
    due_date : DATE
    gambar_thumbnail : VARCHAR(255)
    created_at : TIMESTAMP(0) [default: CURRENT_TIMESTAMP]
    edited_at : TIMESTAMP(0) [default: CURRENT_TIMESTAMP]
}

entity "t04_transaksi" as transaksi {
    * <b>id_transaksi</b> : INT <<PK>> [increment]
    --
    id_user : INT <<FK>> [nullable, ref: > t02_users.id_user]
    * id_program : INT <<FK>> [ref: > t03_program_wakaf.id_program]
    nama : VARCHAR(255)
    pesan_doa : VARCHAR(255)
    no_hp : VARCHAR(255)
    email : VARCHAR(100) // Kolom Baru Migrasi
    hide_nama : SMALLINT [default: 0] // 0: Tampilkan, 1: Anonim
    * nominal : NUMERIC(15,2)
    bukti_pembayaran : VARCHAR(255)
    metode_pembayaran : VARCHAR(20) [default: 'QRIS'] // Kolom Baru Migrasi
    status_pembayaran : SMALLINT [default: 0] // 0: Pending, 1: Approved, 2: Rejected
    * kode_referensi : VARCHAR(100) [unique]
    created_at : TIMESTAMP(0) [default: CURRENT_TIMESTAMP]
    edited_at : TIMESTAMP(0) [default: CURRENT_TIMESTAMP]
}

entity "t05_laporan_penyaluran" as laporan {
    * <b>id_laporan</b> : INT <<PK>> [increment]
    --
    * id_program : INT <<FK>> [ref: > t03_program_wakaf.id_program]
    * judul_laporan : VARCHAR(150)
    keterangan : TEXT
    * dana_disalurkan : NUMERIC(15,2)
    penerima_manfaat : INTEGER
    gambar_laporan : VARCHAR(255)
    created_at : TIMESTAMP(0) [default: CURRENT_TIMESTAMP]
    edited_at : TIMESTAMP(0) [default: CURRENT_TIMESTAMP]
}

entity "t06_pencairan_dana" as pencairan {
    * <b>id_pencairan</b> : INT <<PK>> [increment]
    --
    * id_program : INT <<FK>> [ref: > t03_program_wakaf.id_program]
    * id_user : INT <<FK>> [ref: > t02_users.id_user]
    * jumlah_dana : NUMERIC(15,2)
    keterangan : TEXT
    status_pencairan : SMALLINT [default: 0] // 0: Pending, 1: Approved, 2: Rejected
    surat_approval : VARCHAR(255) [nullable] // Kolom Baru Bukti Fisik
    created_at : TIMESTAMP(0) [default: CURRENT_TIMESTAMP]
    edited_at : TIMESTAMP(0) [default: CURRENT_TIMESTAMP]
}

' --- RELATIONSHIPS (Crow's Foot Notation) ---

roles ||--o{ users : "memiliki"
users ||--o{ transaksi : "melakukan"
program ||--o{ transaksi : "menerima"
program ||--o{ laporan : "mencatat"
program ||--o{ pencairan : "memiliki"
users ||--o{ pencairan : "mengajukan"

@enduml
